styles.css
html,
body {
  margin: 0;
  padding: 0;
  font-family: monospace, monospace;
  overflow: hidden;
}

body {
  width: 100vw;
  height: 100vh;

  font-size: 10px;
  position: relative;

  &::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(
      0deg,
      transparent,
      color-mix(in srgb, yellow 90%, transparent)
    );
    background-size: 2px 2px;
    z-index: 1;
    pointer-events: none;
  }
}

* {
  box-sizing: border-box;
  transform-style: preserve-3d;
}

.viewport-wrapper {
  perspective: var(--perspective);
  position: absolute;
  width: 100vw;
  height: 100vh;

  transition: 120ms perspective ease;
}

#viewport {
  position: absolute;
  top: 50%;
  left: 50%;
}

#scene {
  width: 0;
  height: 0;

  position: relative;

  > * {
    position: absolute;
    top: 0;
    left: 0;
  }
}

.face {
  width: var(--face-size);
  height: var(--face-size);
  border: 1px solid #000;

  &[damage]::after {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;

    /* --grid-size: 25%; */
    --grid-strength: 1px;
    --grid-dash: 0px;
    --grid-gap: 0px;
    --grid-color: black;
    --paper-color: transparent;

    background-color: var(--paper-color);
    background-size: var(--grid-dash) var(--grid-dash),
      var(--grid-size) var(--grid-size);
    background-image: linear-gradient(
        to bottom,
        transparent var(--grid-gap),
        var(--paper-color) var(--grid-gap)
      ),
      linear-gradient(
        to right,
        var(--grid-color) var(--grid-strength),
        transparent var(--grid-strength)
      ),
      linear-gradient(
        to right,
        transparent var(--grid-gap),
        var(--paper-color) var(--grid-gap)
      ),
      linear-gradient(
        to bottom,
        var(--grid-color) var(--grid-strength),
        transparent var(--grid-strength)
      );
  }

  &.highlight {
    background-color: rgba(255, 0, 0, 0.5) !important;
  }

  &.x {
    transform: rotateY(-90deg)
      translate3d(calc(var(--face-size) / 2), 0, calc(var(--face-size) / 2));
  }

  &.y {
    transform: rotateX(90deg)
      translate3d(0, calc(var(--face-size) / 2), calc(var(--face-size) / 2));
  }

  &.z {
    transform: translateZ(0);
  }
}

.crosshair-wrapper {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 30px;
  height: 30px;
  transform: translate(-50%, -50%);
  mix-blend-mode: difference;

  .crosshair {
    width: 30px;
    height: 30px;

    background: linear-gradient(
        0,
        transparent 45%,
        yellow 45%,
        yellow 55%,
        transparent 55%
      ),
      linear-gradient(
        90deg,
        transparent 45%,
        yellow 45%,
        yellow 55%,
        transparent 55%
      );
    clip-path: polygon(
      0% 0%,
      0% 100%,
      25% 100%,
      25% 25%,
      75% 25%,
      75% 75%,
      25% 75%,
      25% 100%,
      100% 100%,
      100% 0%
    );
  }
}

.hud {
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  height: 120px;
  padding: 24px 32px;

  display: flex;
  gap: 32px;

  > .placeholder {
    flex: 1 1 auto;
  }

  > div:not(.placeholder) {
    height: 100%;
    flex: 0 0 170px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    /* gap: 16px; */

    border-radius: 24px;
    background: color-mix(in srgb, orangered 50%, transparent);
    border: 1px solid orangered;
    box-shadow: 0 0 5px 1px orangered;

    > span,
    > label {
      color: orangered;
    }

    > span {
      font-size: 32px;
    }

    > label {
      font-size: 16px;
      color: orangered;
      text-transform: uppercase;
    }
  }
}

.box > div {
  position: absolute;
  border: 1px solid #000;
  background-color: blueviolet;

  &:nth-child(1) {
    width: var(--a);
    height: var(--b);

    transform: rotateY(-90deg)
      translate3d(calc(var(--a) / 2), 0, calc(var(--a) / 2));
  }

  &:nth-child(2) {
    width: var(--c);
    height: var(--a);

    transform: rotateX(90deg)
      translate3d(0, calc(var(--a) / 2), calc(var(--a) / 2));
  }

  &:nth-child(3) {
    width: var(--c);
    height: var(--b);

    transform: translateZ(0);
  }

  &:nth-child(4) {
    width: var(--a);
    height: var(--b);

    transform: rotateY(90deg)
      translate3d(
        calc(var(--a) / -2),
        0,
        calc(var(--c) - var(--a) + var(--a) / 2)
      );
  }

  &:nth-child(5) {
    width: var(--c);
    height: var(--a);

    transform: rotateX(90deg)
      translate3d(
        0,
        calc(var(--a) / 2),
        calc(var(--a) - var(--b) + var(--a) / -2)
      );
  }

  &:nth-child(6) {
    width: var(--c);
    height: var(--b);

    transform: translateZ(var(--a));
  }
}

dialog.menu {
  width: 80vw;
  min-height: 80vh;
  border-radius: 80px;
  background: rgba(0, 0, 0, 0.7);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.5);
  border: none;

  color: white;
  padding: 40px;

  display: flex;
  flex-direction: column;
  gap: 16px;
  align-items: center;
  perspective: var(--perspective);
  user-select: none;

  &::backdrop {
    background: rgba(0, 0, 0, 0.7);
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
  }

  h1 {
    font-size: 32px;
    text-align: center;
  }

  h2 {
    width: 100%;
    font-size: 24px;
    text-align: left;
  }

  .row {
    width: 100%;
    display: flex;
    gap: 40px;
    justify-content: space-evenly;
  }

  .col {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 16px;

    > .item {
      width: 100%;
      display: flex;
      gap: 16px;
      align-items: center;

      > img {
        max-height: 40px;
      }
    }
  }

  .key {
    padding: 12px 16px;
    min-height: 40px;
    min-width: 40px;
    background: white;
    color: black;
    border-radius: 8px;
    font-size: 14px;

    user-select: none;

    display: flex;
    align-items: center;
    justify-content: center;
  }

  img {
    max-width: 200px;
    max-height: 200px;
    border-radius: 16px;
  }

  label {
    font-size: 16px;
  }

  input {
    height: 40px;
    border-radius: 12px;
    padding: 0 16px;
    border: 1px solid white;
    font-size: 16px;
  }

  form {
    width: 100%;
    flex: 0 0 fit-content;
    display: flex;
    flex-direction: column;
    gap: 16px;
    align-items: center;
  }

  button {
    flex: 0 0 140px;
    width: 140px;
    height: 140px;
    border-radius: 100%;
    padding: 0 16px;
    border: none;
    box-shadow: 0px 5px 0px 2px darkred;
    font-size: 16px;
    text-transform: uppercase;
    background-color: red;
    color: black;
    cursor: pointer;
    font-size: 24px;
    font-family: monospace, monospace;

    transform: rotateX(35deg);
    transition: all 120ms;

    &:active {
      box-shadow: 0px 2px 0px 1px darkred;
      transform: rotateX(35deg) translateY(2px);
    }
  }
}

#scoreboard {
  position: fixed;
  top: 50%;
  left: 50%;
  width: 80vw;
  height: 80vh;
  transform: translate(-50%, -50%);

  padding: 40px;
  display: flex;
  flex-direction: column;
  gap: 16px;
  z-index: 12;
  /* pointer-events: none; */
  opacity: 0;

  border-radius: 80px;
  background: rgba(0, 0, 0, 0.7);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.5);
  color: red;

  h1 {
    padding: 0 24px;
    width: 100%;
    border-bottom: 1px solid #ff000077;
    line-height: 2;
    margin: 0;
    margin-bottom: 40px;

    display: flex;
    justify-content: space-between;
    align-items: baseline;
  }

  &.active {
    opacity: 1;
  }

  table {
    border-collapse: collapse;
    width: 100%;
    font-size: 16px;

    thead {
      border-bottom: 2px solid #ff000077;
    }

    tr {
      height: 40px;

      &.self {
        color: orange;
      }
    }

    tr:nth-child(even) {
      background-color: #ff000033;
    }

    td {
      text-align: center;
    }

    td:first-child {
      text-align: left;
      padding-left: 16px;
    }
  }
}

.aim-backdrop {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;

  background: radial-gradient(transparent 50%, black 85%);
  clip-path: polygon(
    0% 0%,
    0% 100%,
    35% 100%,
    35% 25%,
    65% 25%,
    65% 75%,
    35% 75%,
    35% 100%,
    100% 100%,
    100% 0%
  );

  opacity: 0;
  background-size: 300% 300%;
  background-position: center;
  backdrop-filter: blur(0);
  -webkit-backdrop-filter: blur(0);

  transition: all 120ms ease;

  &.active {
    opacity: 1;
    background-size: 100% 100%;
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
  }
}

#chat {
  position: fixed;
  bottom: 110px;
  left: 32px;
  width: 370px;
  overflow: hidden;

  display: flex;
  flex-direction: column;
  gap: 6px;

  .message {
    font-size: 18px;
    color: darkorange;

    .name {
      color: darkgoldenrod;
      font-weight: 800;
    }
  }
}

#chat-input {
  position: fixed;
  top: 32px;
  left: 32px;
  width: 370px;

  display: flex;
  gap: 6px;
  font-size: 18px;
  color: darkgoldenrod;

  opacity: 0;

  &.active {
    opacity: 1;
  }

  transition: opacity 120ms ease;

  input {
    color: darkorange;
    font-size: 18px;
    font-family: monospace, monospace;
    pointer-events: none;

    flex: 1 1 auto;
    border-radius: 0;
    padding: 0;
    border: none;
    font-size: 16px;
    background: none;

    &:focus {
      outline: none;
    }
  }
}

#deathmessages {
  position: fixed;
  top: 32px;
  right: 32px;

  display: flex;
  flex-direction: column;
  gap: 4px;

  .message {
    font-size: 16px;
    padding: 6px 16px;
    color: red;

    white-space: nowrap;
    overflow: hidden;

    background-color: #000000cc;
    border-radius: 12px;

    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);

    &:has(.self) {
      background-color: #ffffffcc;
    }

    .self {
      color: green;
    }
  }
}

